# FinnDatasailing

./: README.md  config.py  gpxcalculator2.py  gpxcalculator_twd_vmg.py  pyproject.toml  rander.py  run.py
